upgrade sanity and gatsby

--- a/studio/styles/variables.css
+++ b/studio/styles/variables.css
@@ -12,3 +12,19 @@
   /*--main-navigation-color: var(--brand-secondary);*/
   /*--main-navigation-color--inverted: var(--brand-secondary--inverted);*/
 }
+
+fieldset [data-ui='Box'] legend [data-ui='Text'] > span {
+  font-size: 1.25rem;
+  font-weight: bold;
+  /*margin: 1em 0 0.1em;*/
+}
+
+[data-ui='Box'] [data-testid] > [data-ui='Grid'],
+fieldset [data-ui='Box'] > [data-ui='Grid'] {
+  row-gap: 1rem;
+}
+
+fieldset[data-level='1'] > [data-ui='Box'] {
+  border: none;
+  padding-left: 0;
+}
